welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:12: error: not found: value getLargeurMonde
		if ((getX==0)&&(getY!=getLargeurMonde()-1)) {
                                      ^Diagonal:17: error: not found: value getLargeurMonde
			if (getY==getLargeurMonde()-1) {
                                  ^